# collabtracker

./: .gitignore
service/: Dockerfile  docker-compose.override.yml.example  docker-compose.yml
service/app/: app.py  pyproject.toml
service/app/connectors/: __init__.py  gitlab.py
