[tool.poetry]
name = "collabtracker"
version = "0.1.0"
description = "Tracks collaborations"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gql = "^3.4.0"
python-multipart = "^0.0.5"
fastapi = "^0.88.0"
SQLAlchemy = "^1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
