[tool.poetry]
name = "collabtracker"
version = "0.1.0"
description = "Tracks collaborations"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-multipart = "^0.0.5"
fastapi = "^0.88.0"
SQLAlchemy = "^1.4.45"
uvicorn = "^0.20.0"
httpx = "^0.23.1"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
